@@ -9,6 +9,8 @@ VERSION 2.9-Beta 1
   CHANGES:
 
   BUGFIXES:
+   * Album Artist / Compilation / Disc Number tags are now read correctly
+     from APE tags. Patch by Bruno Léon <bruno.leon@nividic.org>. (BR 323735)
    * Using Shuffle keyboard shortcut no longer causes Amarok to crash.
      (BR 323614)
 
